# geosnitch

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: geoclue2.rs  geoclue2_client_location_sys.rs  geoclue2_client_sys.rs  geoclue2_sys.rs  location.rs  location_session.rs  main.rs  mqtt_config.rs  mqtt_session.rs
src/geoclue2/: client_location_sys.rs  client_sys.rs  manager_sys.rs  mod.rs
