[package]
name    = "geosnitch"
version = "0.1.0"
authors = ["Jacob Killelea <Jkillelea@protonmail.ch>"]

[dependencies]
dbus = "0.6.1"
serde = "*"
serde_json = "*"
serde_derive = "*"
mqtt-protocol = "0.4.2"
log = "0.4.1"
env_logger = "0.5.6"

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
